syntax = "proto3";

package user;

option go_package = "github.com/bobgromozeka/yp-diploma2/internal/interfaces/user";

service User {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}

message FieldError {
  string name = 1;
  string error = 2;
}

message SignUpRequest {
  string login = 1;
  string password = 2;
}

message SignUpResponse {
  bool success = 1;
  repeated FieldError errors = 2;
}

message SignInRequest {
  string login = 1;
  string password = 2;
}

message SignInResponse {
  optional string token = 1;
  string error = 2;
}